--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,14 @@
 {
   "name": "book-search",
   "version": "0.1.0",
-  "description": "Google Book Search",
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "3.4.3"
   },
   "scripts": {
@@ -14,5 +16,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
